added api route for dg options and regenerated swagger
